storybook build and chromatic deployment

--- a/storybook-static/iframe.html
+++ b/storybook-static/iframe.html
@@ -509,7 +509,7 @@
   }
 </script>
 
-    <script type="module" crossorigin src="./assets/iframe-5N5hv_MH.js"></script>
+    <script type="module" crossorigin src="./assets/iframe-BDKNrwH6.js"></script>
   </head>
 
   <body>
